Fixed the font size for the projects header to not overflow

--- a/src/stylesheet.css
+++ b/src/stylesheet.css
@@ -391,8 +391,9 @@ html {
 .projects_container_title h1 {
   font-family: Arial, Helvetica, sans-serif;
   margin-left: 2%;
-  width: 40%;
-  font-size: 11rem;
+  margin-top: 10%;
+  width: 45%;
+  font-size: 10rem;
   background: rgb(106, 255, 225);
   background: linear-gradient(
     135deg,
